--- a/packages/themes/src/morpheme/_badge.scss
+++ b/packages/themes/src/morpheme/_badge.scss
@@ -38,6 +38,7 @@
   &-icon {
     width: var(--badge-icon-size) !important;
     height: var(--badge-icon-size) !important;
+    color: var(--badge-color) !important;
   }
 
   // modifiers
